--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -209,6 +209,8 @@
   "ads standard": "إعلانات اعتياديه",
   "valid": "صالح",
   "days": "يوم",
-  "What’s included": "ما هو المشمول"
-
+  "What’s included": "ما هو المشمول",
+  "No results found": "لم يتم العثور على نتائج",
+  "No results found 🥲": "لم يتم العثور على نتائج 🥲",
+  "no results for what you are looking for. Try again with another word or contact support.": "لا توجد نتائج لما تبحث عنه. حاول مرة أخرى باستخدام كلمة أخرى أو اتصل بالدعم."
 }
