--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -174,7 +174,6 @@
   "Offer Details": "Подробности предложения",
   "Offers": "Предложения",
   "Claim Offer": "Предложение о праве требования",
-
   "FAQ": "Часто задаваемые вопросы",
   "About us": "О нас",
   "Privacy of use": "Конфиденциальность использования",
@@ -212,6 +211,8 @@
   "ads standard": "стандарт объявлений",
   "valid": "действительный",
   "days": "дней",
-  "What’s included": "Что включено"
-
+  "What’s included": "Что включено",
+  "No results found": "Результаты не найдены.",
+  "No results found 🥲": "Результаты не найдены 🥲",
+  "no results for what you are looking for. Try again with another word or contact support.": "нет результатов по вашему запросу. Попробуйте еще раз с другим словом или обратитесь в службу поддержки."
 }
