--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -223,5 +223,11 @@
   "Add work experience": "Add work experience",
   "Remove": "Remove",
   "Remove Work Experience": "Remove Work Experience ?",
-  "Are you sure you want to delete this work experience?": "Are you sure you want to delete this work experience?"
+  "Are you sure you want to delete this work experience?": "Are you sure you want to delete this work experience?",
+  "Add education": "Add education",
+  "Edit education": "Edit education",
+  "Describe your education": "Describe your education",
+  "Describe your work experience": "Describe your work experience",
+  "Remove Education": "Remove Education",
+  "Are you sure you want to delete this education?": "Are you sure you want to delete this education?"
 }
