work experience, education

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -232,5 +232,7 @@
   "Describe your education": "Describe your education",
   "Describe your work experience": "Describe your work experience",
   "Remove Education": "Remove Education",
-  "Are you sure you want to delete this education?": "Are you sure you want to delete this education?"
+  "Are you sure you want to delete this education?": "Are you sure you want to delete this education?",
+  "Select": "Select",
+  "Job title": "Job title"
 }
