--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -232,5 +232,7 @@
   "Describe your education": "Опишите свое образование",
   "Describe your work experience": "Опишите свой опыт работы",
   "Remove Education": "Удалить образование",
-  "Are you sure you want to delete this education?": "Вы уверены, что хотите удалить это образование?"
+  "Are you sure you want to delete this education?": "Вы уверены, что хотите удалить это образование?",
+  "Select": "Выбирать",
+  "Job title": "Должность"
 }
