--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -230,5 +230,7 @@
   "Describe your education": "وصف تعليمك",
   "Describe your work experience": "وصف تجربتك في العمل",
   "Remove Education": "إزالة التعليم",
-  "Are you sure you want to delete this education?": "هل أنت متأكد أنك تريد حذف هذا التعليم؟"
+  "Are you sure you want to delete this education?": "هل أنت متأكد أنك تريد حذف هذا التعليم؟",
+  "Select": "اختار",
+  "Job title": "اسم الوظيفة"
 }
