--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -234,5 +234,8 @@
   "Remove Education": "Удалить образование",
   "Are you sure you want to delete this education?": "Вы уверены, что хотите удалить это образование?",
   "Select": "Выбирать",
-  "Job title": "Должность"
+  "Job title": "Должность",
+  "Education degree": "Образование, степень",
+  "Ok": "Хорошо",
+  "University": "Университет"
 }
