--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -235,5 +235,7 @@
   "Job title": "اسم الوظيفة",
   "Education degree": "درجة التعليم",
   "Ok": "حسنا",
-  "University": "جامعة"
+  "University": "جامعة",
+  "Post Comments": "نشر التعليقات",
+  "Write Comment": "اكتب تعليق"
 }
