--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -237,5 +237,7 @@
   "Job title": "Job title",
   "Education degree": "Education degree",
   "Ok": "Ok",
-  "University": "University"
+  "University": "University",
+  "Post Comments": "Post Comments",
+  "Write Comment": "Write Comment"
 }
