--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -237,5 +237,7 @@
   "Job title": "Должность",
   "Education degree": "Образование, степень",
   "Ok": "Хорошо",
-  "University": "Университет"
+  "University": "Университет",
+  "Post Comments": "Опубликовать комментарии",
+  "Write Comment": "Написать комментарий"
 }
