--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -243,5 +243,8 @@
   "Certification Name": "Название сертификации",
   "Certification Link": "Ссылка на сертификацию",
   "End date": "Дата окончания",
-  "Describe your certification": "Опишите вашу сертификацию"
+  "Describe your certification": "Опишите вашу сертификацию",
+  "Likes": "Нравится",
+  "Comments": "Комментарии",
+  "Share": "Мачар"
 }
