--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -241,5 +241,8 @@
   "Certification Name": "اسم الشهادة",
   "Certification Link": "رابط الشهادة",
   "End date": "تاريخ الانتهاء",
-  "Describe your certification": "وصف شهادتك"
+  "Describe your certification": "وصف شهادتك",
+  "Likes": "الإعجابات",
+  "Comments": "تعليقات",
+  "Share": "مشاركه"
 }
