--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -243,5 +243,8 @@
   "Certification Name": "Certification Name",
   "Certification Link": "Certification Link",
   "End date": "End date",
-  "Describe your certification": "Describe your certification"
+  "Describe your certification": "Describe your certification",
+  "Likes": "Likes",
+  "Comments": "Comments",
+  "Share": "Share"
 }
