--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -247,8 +247,6 @@
   "Likes": "Нравится",
   "Comments": "Комментарии",
   "Share": "Мачар",
-  "Post Comments": "Опубликовать комментарии",
-  "Write Comment": "Написать комментарий",
   "For You": "Для тебя",
   "Start date": "Дата начала",
   "Hello How we can help you": "Здравствуйте! Чем мы можем вам помочь?",
@@ -256,5 +254,9 @@
   "Change password": "Изменить пароль",
   "Enter New Password": "Введите новый пароль",
   "Please enter your old password correctly to change your password.": "Пожалуйста, введите ваш старый пароль правильно, чтобы изменить его.",
-  "Confirm New Password": "Подтвердите новый пароль"
+  "Confirm New Password": "Подтвердите новый пароль",
+  "All": "Все",
+  "Buying": "Покупка",
+  "Selling": "Продажа",
+  "Important": "Важный"
 }
