--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -245,8 +245,6 @@
   "Likes": "الإعجابات",
   "Comments": "تعليقات",
   "Share": "مشاركه",
-  "Post Comments": "نشر التعليقات",
-  "Write Comment": "اكتب تعليق",
   "For You": "من اجلك",
   "Start date": "تاريخ البداية",
   "Hello How we can help you": "مرحبًا، كيف يمكننا مساعدتك؟",
@@ -254,5 +252,9 @@
   "Change password": "تغيير كلمة المرور",
   "Enter New Password": "أدخل كلمة المرور الجديدة",
   "Please enter your old password correctly to change your password.": "يرجى إدخال كلمة المرور القديمة بشكل صحيح لتغيير كلمة المرور الخاصة بك.",
-  "Confirm New Password": "تأكيد كلمة المرور الجديدة"
+  "Confirm New Password": "تأكيد كلمة المرور الجديدة",
+  "All": "الجميع",
+  "Buying": "شراء",
+  "Selling": "بيع",
+  "Important": "مهم"
 }
