added contact info logic

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -266,5 +266,7 @@
   "Selling": "بيع",
   "Important": "مهم",
   "Check": "تأكيد",
-  "Next": "التالي"
+  "Next": "التالي",
+  "Subject Line": "الموضوع",
+  "Email Support": "دعم البريد الإلكتروني"
 }
