--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -268,5 +268,7 @@
   "Selling": "Selling",
   "Important": "Important",
   "Check": "Check",
-  "Next": "Next"
+  "Next": "Next",
+  "Subject Line": "Subject Line",
+  "Email Support": "Email Support"
 }
