--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -268,5 +268,7 @@
   "Selling": "Продажа",
   "Important": "Важный",
   "Check": "Проверятьت",
-  "Next": "Следующий"
+  "Next": "Следующий",
+  "Subject Line": "Предмет",
+  "Email Support": "Поддержка по электронной почте"
 }
