--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -268,5 +268,6 @@
   "Check": "تأكيد",
   "Next": "التالي",
   "Subject Line": "الموضوع",
-  "Email Support": "دعم البريد الإلكتروني"
+  "Email Support": "دعم البريد الإلكتروني",
+  "Send Message": "إرسال رسالة"
 }
