--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -270,5 +270,6 @@
   "Check": "Check",
   "Next": "Next",
   "Subject Line": "Subject Line",
-  "Email Support": "Email Support"
+  "Email Support": "Email Support",
+  "Send Message": "Send Message"
 }
