--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -270,5 +270,6 @@
   "Check": "Проверятьت",
   "Next": "Следующий",
   "Subject Line": "Предмет",
-  "Email Support": "Поддержка по электронной почте"
+  "Email Support": "Поддержка по электронной почте",
+  "Send Message": "Отправить сообщение"
 }
